fixed alignment issue with columns

--- a/questionnaire/static/questionnaire.css
+++ b/questionnaire/static/questionnaire.css
@@ -136,4 +136,5 @@ input.sending {
 {
     width: 50%;
     display: inline-block;
+    vertical-align: top;
 }
